--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "dependencies": {
         "@types/graphql": ">=14.0.5",
         "@types/node": ">=10.0.0",
-        "ts-type-ast": ">=1.0.6"
+        "ts-type-ast": ">=1.0.7"
     },
     "peerDependencies": {
         "typescript": ">3.3.0",
         "graphql": ">14.0.0"
     },
     "devDependencies": {
-        "typescript": "3.4.0-rc",
-        "ts-node": "^8.0.2"
+        "ts-node": ">=8.0.2",
+        "typescript": ">=3.4.5"
     }
 }
