--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,8 @@
         "outDir": "dist",
         "declaration": true,
         "strict": true
-    }
+    },
+    "exclude": [
+      "node_modules",
+    ]
 }
